--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script defer src="./js/index.js"></script>
-    <!-- <script defer src="./js/index2.js"></script>  || activer la balise form-->
+    <!--  <script defer src="./js/index.js"></script> -->
+    <script defer src="./js/index2.js"></script>
+    <!-- || activer la balise form -->
     <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
     <h1>Mes taches</h1>
-    <!-- <form id="form"> -->
-    <input type="text" id="task" />
-    <button id="add">ajouter</button>
-    <!-- </form> -->
+    <form id="form">
+      <div>
+        <input type="text" id="task" />
+        <button id="add">ajouter</button>
+      </div>
+    </form>
     <ul id="liste"></ul>
   </body>
 </html>
